# ImGui-Toasts

./: CMakeLists.txt  LICENSE  Notification.vcxproj  Notification.vcxproj.filters  README.md  imgui.ini  main.cpp
x64/Debug/: Notification.exe.recipe  vc143.idb
x64/Debug/Notification.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Notification.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
